# textbox

./: .editorconfig  .envrc-example  .gitignore  Brewfile  LICENSE.txt  Makefile  README.md  noxfile.py  pyproject.toml
docs/: Makefile  api.rst  conf.py  index.md
src/textbox/: __init__.py  cli.py  plugins.py
src/textbox/cli/: __init__.py  __main__.py
src/textbox/storage/builtin/: __init__.py  textbox.sql
tests/: conftest.py  test_cli.py  test_core.py  test_package.py  test_storage_builtin.py  test_textbox_pkg.py
