[project]
name = "textbox"
version = "1.0.0"
description = "Remember text for you, wholesale."
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["content", "sqlite3"]
authors = [{ name = "Garth Kidd", email = "garth@garthk.com" }]
maintainers = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Database",
  "Topic :: System :: Archiving",
]
dependencies = ["click==8.1.7"]

[project.optional-dependencies]
build = ["nox==2023.4.22"]
docs = [
  "furo==2023.8.19",
  "myst-parser==2.0.0",
  "Sphinx==7.1.2",
  "sphinx-toolbox==3.5.0",
  "sphinx-notfound-page==0.8.3",
  "sphinxcontrib-mermaid==0.9.2",
]
test = ["black==23.7.0", "mypy==1.5.1", "pytest==7.4.0", "ruff==0.0.285"]
util = [
  "datasette==0.64.3",
  "datasette-render-html==1.0",
  "datasette-render-images==0.4",
  "sqlite-utils==3.35",
]
dev = ["textbox[build,docs,test,util]"]

[project.urls]
"Homepage" = "https://github.com/garthk/textbox"
"Bug Reports" = "https://github.com/garthk/textbox/issues"
"Source" = "https://github.com/garthk/textbox/"

[project.scripts]
textbox = "textbox.cli:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy] # 'extend-exclude' excludes files or directories in addition to the defaults
warn_return_any = true
warn_unused_configs = true
namespace_packages = true
mypy_path = ["src"]
packages = ["textbox"]

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 98
fixable = ["ALL"]
select = ["ALL"]
ignore = [
  "ANN101",
  "D203",
  "D211",
  "D212",
  "D300",
  "FIX002",
  "TCH003",
  "TD002",
  "TD003",
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["D", "INP001", "S101"]
"noxfile.py" = ["D"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"textbox.storage.builtin" = ["*.sql"]

[tool.setuptools.packages.find]
where = ["src"]
